@@ -1,6 +1,7 @@
 12/01/2009
 - fixed parsing of names of special formated tags like if,elseif,while,for,foreach
 - removed direct access to constants in templates because of some syntax problems
+- removed cache resource plugin for mysql from the distribution
 
 11/30/2009
 - map 'true' to SMARTY_CACHING_LIFETIME_CURRENT for the $smarty->caching parameter
